z-index fixes

--- a/css/style.css
+++ b/css/style.css
@@ -337,7 +337,7 @@ div.statecontainer {
 	display: block;
 	background-image: url('/img/State.png');
 	cursor: pointer;
-	z-index: 5;
+	z-index: 7;
 }
 
 div.statecontainer:hover {
@@ -381,7 +381,7 @@ div.statecontainer .circle {
 	width: 25px;
 	height: 25px;
 	position: absolute;
-	z-index: 1000;
+	z-index: 8;
 	user-select: none;
 	-webkit-user-select: none;
 	-moz-user-select: none;
@@ -424,7 +424,7 @@ div.statecontainer .circle .text {
 }
 
 #actionmenu {
-	z-index: 30;
+	z-index: 10;
 	display: block;
 	position: absolute;
 	top: 800px;
@@ -507,6 +507,7 @@ div.statecontainer .circle .text {
 .lbl {
 	color: 				 #244;
 	padding-bottom: 	 2em;
+	margin-left: 		 2em;
 	z-index: 			 20;
 	user-select: 		 none;
 	-webkit-user-select: none;
